# abseil-py

./: .bazelversion  .readthedocs.yaml  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  MODULE.bazel  Nafourty  README.md  WORKSPACE  pyproject.toml  setup.py
.github/workflows/: pypi_upload.yml  test.yml
absl/: .readthedocs.yaml  BUILD  CHANGELOG.md  __init__.py  _build_defs.bzl  app.py  app.pyi  build_defs.bzl  command_name.py
absl/flags/: BUILD  __init__.py  __init__.pyi  _argument_parser.py  _argument_parser.pyi  _defines.py  _defines.pyi  _exceptions.py  _flag.py  _flag.pyi  _flagvalues.py  _flagvalues.pyi  _helpers.py  _helpers.pyi  _validators.py  _validators_classes.py  argparse_flags.py
absl/flags/tests/: _argument_parser_test.py  _flag_test.py  _flagvalues_test.py  _helpers_test.py  _validators_test.py  argparse_flags_test.py  argparse_flags_test_helper.py  flags_formatting_test.py  flags_helpxml_test.py  flags_numeric_bounds_test.py  flags_test.py  flags_unicode_literals_test.py  module_bar.py  module_baz.py  module_foo.py
absl/logging/: BUILD  __init__.py  __init__.pyi  converter.py
absl/logging/tests/: converter_test.py  log_before_import_test.py  logging_functional_test.py  logging_functional_test_helper.py  logging_test.py  verbosity_flag_test.py
absl/testing/: BUILD  _bazelize_command.py  _pretty_print_reporter.py  absltest.py  flagsaver.py  parameterized.py  xml_reporter.py
absl/testing/tests/: absltest_env.py  absltest_fail_fast_test.py  absltest_fail_fast_test_helper.py  absltest_filtering_test.py  absltest_filtering_test_helper.py  absltest_py3_test.py  absltest_randomization_test.py  absltest_randomization_testcase.py  absltest_sharding_test.py  absltest_sharding_test_helper.py  absltest_sharding_test_helper_no_tests.py  absltest_test.py  absltest_test_helper.py  absltest_test_helper_skipped.py  flagsaver_test.py  parameterized_test.py  xml_reporter_helper_test.py  xml_reporter_test.py
absl/tests/: app_test.py  app_test_helper.py  command_name_test.py  python_version_test.py
ci/: run_tests.sh
docs/: Makefile  requirements.txt
docs/source/: api.rst  conf.py  index.rst  parent_readme_link.rst  readme_link.rst  test.rst
smoke_tests/: sample_app.py  sample_test.py  smoke_test.sh
