module(name = "io_abseil_py")

bazel_dep(name = "rules_cc", version = "0.1.2")
bazel_dep(name = "rules_python", version = "1.5.1")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.8")
python.toolchain(python_version = "3.9")
python.toolchain(python_version = "3.10")
python.toolchain(python_version = "3.11")
python.toolchain(python_version = "3.12")
python.toolchain(python_version = "3.13")
use_repo(python, "python_3_10", "python_3_11", "python_3_12", "python_3_13", "python_3_8", "python_3_9")

register_toolchains(
    "@python_3_8//:all",
    "@python_3_9//:all",
    "@python_3_10//:all",
    "@python_3_11//:all",
    "@python_3_12//:all",
    "@python_3_13//:all",
)
